# deck-transfer

./: .gitignore  README.md  debug.html  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.md
msix-dist/: AppxManifest.xml
msix-package/: AppxManifest.xml
src/: App.tsx  debug.ts  main.tsx  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  lib.rs  network.rs  scheduler.rs  store.rs  sync.rs
src/components/: HistoryTab.tsx  RemoteFolderPicker.tsx  ScheduleDialog.tsx  SyncTab.tsx  UpgradeModal.tsx
src/services/: premium.ts
supabase/: config.toml
supabase/functions/deck-transfer-check-pro/: index.ts
supabase/functions/deck-transfer-manage-sub/: index.ts
supabase/functions/deck-transfer-stripe-webhook/: index.ts
