[package]
name = "deck-transfer"
version = "0.1.0"
description = "Transfer files from PC to Steam Deck over ethernet"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
ssh2 = "0.9"
network-interface = "2"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
chrono = "0.4"
